# casa-squire-bot

./: .gitignore  .pre-commit-config.yaml  README.md  bot.py  close.bat  install_windows.bat  pyproject.toml  requirements.txt  run_bot.ps1  run_windows.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: ci.yml  pylint.yml  release.yml
src/: main.py
src/bot/: dispatcher.py
src/bot/commands/: __init__.py  base.py  shutdown.py  start.py
src/bot/conversation/: base.py  shutdown.py
src/bot/middleware/: owner.py
src/bot/states/: base.py  shutdown.py
src/settings/: __init__.py  app_settings.py  logs_settings.py  telegram_settings.py
src/utils/: shutdown.py  telegram.py
