[project]
name = "src"
version = "0.1.1"
description = ""
authors = [{ name = "hynrey", email = "hynrey@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "pydantic (>=2.11.10,<2.12)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
